[gd_scene load_steps=2 format=3 uid="uid://ddawfdqr52jcb"]

[ext_resource type="Script" path="res://UI/debug_game_variables.gd" id="1_04jnk"]

[node name="DebugGameVariables" type="PanelContainer"]
offset_left = 101.0
offset_top = 85.0
offset_right = 250.0
offset_bottom = 108.0
script = ExtResource("1_04jnk")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="StateContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/StateContainer"]
layout_mode = 2
text = "Game State:"

[node name="Value" type="Label" parent="MarginContainer/VBoxContainer/StateContainer"]
layout_mode = 2
text = "null"

[node name="HungerContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HungerContainer"]
layout_mode = 2
text = "Pet Hunger:"

[node name="Value" type="Label" parent="MarginContainer/VBoxContainer/HungerContainer"]
layout_mode = 2
text = "0"

[node name="FearContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/FearContainer"]
layout_mode = 2
text = "Town Fear:"

[node name="Value" type="Label" parent="MarginContainer/VBoxContainer/FearContainer"]
layout_mode = 2
text = "0"

[node name="PlayerLapContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/PlayerLapContainer"]
layout_mode = 2
text = "Player Lap:"

[node name="Value" type="Label" parent="MarginContainer/VBoxContainer/PlayerLapContainer"]
layout_mode = 2
text = "0"

[node name="PlayerTurnContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/PlayerTurnContainer"]
layout_mode = 2
text = "Player Turn:"

[node name="Value" type="Label" parent="MarginContainer/VBoxContainer/PlayerTurnContainer"]
layout_mode = 2
text = "0"

[node name="PlayerSpaceContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/PlayerSpaceContainer"]
layout_mode = 2
text = "Player Space:"

[node name="Value" type="Label" parent="MarginContainer/VBoxContainer/PlayerSpaceContainer"]
layout_mode = 2
text = "0"
